prod-deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-data-api-service
  namespace: maa-prod
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    maa-org.net/app: game-data-api
