prod-deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: game-data-api-ingress
  namespace: maa-prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
    - host: game-data.maa-org.net
      http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: game-data-api-service
                port:
                  number: 8080
